----------------------------

All:

- Add move ctor and assignment to wxString (Pavel Tyunin, #23224).
- Update Georgian translations (NorwayFun, #22673).

All (GUI):

- Fix wxFLEX_GROWMODE_ALL in wxFlexGridSizer with proportions (#23253).
- Fix wxEditorDialogProperty in wxPropertyGrid (#23272).

wxMSW:

- Fix setting locale for wxLANGUAGE_UKRAINIAN (Ulrich Telle, #23210).

wxOSX:

- Fix underlined fonts sometimes appearing without underline (#23264).
- Respect composition mode when drawing bitmaps (#23240).
- Fix background colour of shaped windows, e.g. wxRichToolTip (#23296).


3.2.2: (released 2023-02-08)
----------------------------

All:

- Fix regression in saving TIFF images that could end up truncated (#23048).
- Fix long standing bug in parsing wxHTTP responses.
- Fix wx-config generation in CMake builds (Maarten Bent, #22806).
- Fix compilation of code using wxTransformMatrix with recent gcc (#22790).
- Fix memory leak when destroying wxThread (Antti Nietosvaara, #22840).
- Add serial number to wxwin.m4 file (#22848).
- Update Expat submodule to include the fix for CVE-2022-40674.
- Update zlib to 1.2.13.1 to include the fix for CVE-2022-37434 (#22919).
- Allow 'T' separator in wxDateTime::ParseDateTime() (Blake-Madden, #22999).
- Add Serbian translations (Nikola Jović).
- Fix MT-safety problem in wxZipInputStream (#23054).
- Fix building all samples in release build with CMake (#23106).
- Fix using pkg-config when cross-compiling (#22886, #23037, #23171).
- Fix compilation problem in wxUILocale code when using musl (Khem Raj, #23050).
- Add wxUILocale::GetSystemLocaleId() replacing GetSystemLocale() (#23114).
- Fail when setting unsupported "mixed" locale under Unix (#23218).

All (GUI):

- Improve wxWebView::RunScriptAsync() performance (Tobias Taschner, #22781).
- Fix data race when processing events generated in a worker thread.
- Fix compilation problem in wx/propgrid/editors.h (Loïc Bartoletti, #22875).